templates/style.css
body
{
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    font-size: 10pt;
    font-family: "sans-serif";
    background-color: #f9f9f9;
}

header
{
    font-size: 6vh;
    font-weight: bold;
    text-align: center;
    font-family: Futura, Helvetica, sans-serif;

    margin-top: 6vh;
}

header a
{
    color: #777777;
    font-style: none;
    text-decoration: none;
}
header a span
{
    font-style: inherit;
}

center
{
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

button
{
    height: 2em;
    font-size: 1.5vh;
}

select
{
    height: 2em;
    font-size: 1.5vh;
}

#searchbar
{
    width: 60vw;
    height: 4vh;
    font-size: 2vh;
    border: 1px solid #CCCCCC;
    background-color: #FFFFFF;
    resize: none;

    display: flex;
    align-items: center;
    justify-content: left;
}
/* ref: https://stackoverflow.com/a/56704079 */
[contenteditable][placeholder]:empty:before 
{
    content: attr(placeholder);
    position: absolute;
    color: gray;
    background-color: transparent;
}

/* Style for the unordered list */
ul {
    list-style: none; /* Remove default bullets */
    padding: 0; 
    margin: 0;
    display: flex;
    flex-wrap: wrap;
    gap: 3px; /* Space between images */
}

/* Style for each list item */
li {
    flex: 0 0 calc(20% - 8px); /* 20% width for 5 items per row, adjusted for gap */
    box-sizing: border-box; /* Include padding/border in width */
}

/* Style for images */
ul li img {
    max-width: 160;
    max-height: 160;
    display: block; /* Remove extra space below image */
}

